# SP-editor

./: .gitignore  1.spe  123.spe  12345.spe  README.md  SPEditor.spec  icons_rc.py  main.spec  pyproject.toml  requirements-dev.txt  ruff.toml  sample.txt
icons/: icons.qrc
src/: main.py
src/SP-editor/: Myfile.dxf  _execute.py  barest_dialog.py  connect_etabs.py  connector_Etabs.py  general_infor_dialog.py  icons_rc.py  import_etabs_dialog.py  main.py  material_dialog.py  new_file_dialog.py  open_file_dialog.py  spcolumn_cti.py  utils.py
src/SP-editor/classes/: CTIUserOptions.py  global_variables.py
src/SP-editor/core/: CTIUserOptions.py  connect_etabs.py  readExcel.py  read_acad.py  spcolumn_cti.py
src/SP-editor/crud/: cr_barset.py  cr_general_infor.py  cr_material.py  general_infor_crud.py
src/SP-editor/database/: database.py  models.py  pandas_model_material.py  pandas_table_model.py
src/SP-editor/models/: general_infor_tb.py  sp_editor_db.py
src/SP-editor/widgets/: barSet_dialog.ui  generalInfor_dialog.py  generalInfor_dialog.ui  main_window.py  main_window.ui  material_dialog.py  material_dialog.ui  material_dialog_ui.py  misc_dialog.py
src/Sp_editor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  temp.csv  top_level.txt
src/sp_editor/: __init__.py  barest_dialog.py  connector_Etabs.py  groups_dialog.py  icons_rc.py  import_etabs_dialog.py  main.py  material_dialog.py  new_file_dialog.py  open_file_dialog.py  test.py  utils.py
src/sp_editor/Property Libraries/: tb_unit_EN-SI_conversion.json  tb_unit_SI-EN_conversion.json
src/sp_editor/containers/: controller_container.py  service_container.py
src/sp_editor/controllers/: about_dialog.py  barSet_controller.py  barest_dialog.py  batch_processor_dialog.py  calculationCase_controller.py  calculation_case_dialog.py  calculation_case_modify_dialog.py  combos_dialog.py  cti_file_making_dialog.py  etabsImport_controller.py  generalInfor_controller.py  general_infor_dialog.py  groupLevel_controller.py  groups_dialog.py  import_etabs_dialog.py  loadCombos_controller.py  mainWindow_controller.py  material_controller.py  material_dialog.py  newFile_controller.py  new_file_dialog.py  openFile_controller.py  open_file_dialog.py
src/sp_editor/core/: _execute.py  (+18 more)
tests/: TestBM.spe  config.py  demoAB.spe  demoAB1.spe  test.db  test3D.py  test_connect_etabs.py  test_listview.py  test_main.py  test_utils.py
tests/TestBM/: 1.spe  1235.spe  DEMONO1.spe  DEMONO3.spe  DemoNo2.spe  cti_data_merging.py  cti_file_making_dialog.py  demo1.spe  demo2.spe  demo3.spe  demono1.spe  engineering_funcs.py  find_pier.py  find_uniform_bars.py  force_filter.py  spcolumn_cti.py  test_main.py
tests/repositories_test/: barset_repository_test.py  generalInfor_repository_test.py
tests/services_test/: barset_service_test.py  etabsConnection_test.py  file_service_test.py  generalInfor_service_test.py
(+94 files in other folders)
